# Day23-DinhNhatThanh-2A202600572

./: .gitignore  Makefile  README.md  Setup_Error.md  agentops-report.json  docker-compose.override.yml  docker-compose.yml  pyproject.toml  rubric.md  take_screenshots.py
00-setup/: setup-report.json
02-prometheus-grafana/grafana/dashboards/: ai-service-overview.json  cross-day-dashboard.json  slo-burn-rate.json
02-prometheus-grafana/prometheus/: prometheus.yml
04-drift-detection/reports/: drift-report.html
05-integration/: monitor-day22-alignment.py
BONUS-agentops/: agent_run.py
BONUS-ebpf-profiling/: alloy-ebpf.river
BONUS-llm-native-obs/: trace_llm.py
BONUS-llm-native-obs/langfuse-compose/: docker-compose.yml
submission/: REFLECTION.md  agentops-report.json
