[project]
name = "day23-track2-observability-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "locust==2.32.4",
    "numpy==2.1.3",
    "opentelemetry-api==1.28.2",
    "opentelemetry-exporter-otlp==1.28.2",
    "opentelemetry-instrumentation-fastapi==0.49b2",
    "opentelemetry-instrumentation-requests==0.49b2",
    "opentelemetry-sdk==1.28.2",
    "pandas==2.2.3",
    "prometheus-client==0.21.0",
    "pyarrow==18.1.0",
    "pydantic==2.10.2",
    "requests==2.32.3",
    "scipy==1.14.1",
    "structlog==24.4.0",
    "uvicorn[standard]==0.32.1",
]
